--- a/first.html
+++ b/first.html
@@ -1,4 +1,8 @@
 <main>
+    <head>
+        <script defer data-domain="blue-sky-sailboat.github.io" src="https://plausible.io/js/script.file-downloads.outbound-links.pageview-props.tagged-events.js"></script>
+        <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
+    </head>
     <body>
         <h1>
             Hi!
