--- a/giscus.html
+++ b/giscus.html
@@ -1,15 +1,17 @@
 ﻿<section class="giscus">
 <script src="https://giscus.app/client.js"
-  data-repo="blue-sky-sailboat/blue-sky-sailboat.github.io"
-  data-repo-id="REPO_ID_여기에"
-  data-category="General"
-  data-category-id="CATEGORY_ID_여기에"
-  data-mapping="pathname"
-  data-reactions-enabled="1"
-  data-emit-metadata="0"
-  data-input-position="bottom"
-  data-theme="light"
-  crossorigin="anonymous"
-  async>
+        data-repo="blue-sky-sailboat/blue-sky-sailboat.github.io"
+        data-repo-id="R_kgDOP7r2_A"
+        data-category="General"
+        data-category-id="DIC_kwDOP7r2_M4CwOlA"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="preferred_color_scheme"
+        data-lang="ko"
+        crossorigin="anonymous"
+        async>
 </script>
 </section>
